fixes production things
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1279 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/production/shape.html.haml
+++ b/app/views/production/shape.html.haml
@@ -1,2 +1,15 @@
+=toolbar do |t|
+  -t.link :shapes
+  -t.link :shape_update, :id=>@shape.id
+
+%table
+  %tr
+    %td
+      =evalue @shape, :name
+      =evalue @shape, :polygon
+    %td
+      =evalue @shape, :description
+      =evalue @shape, :master
+
 %h2=tc :operations
 =dyta(:operations)
