git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1287 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_print_by_journal.html.haml
+++ b/app/views/accountancy/_print_by_journal.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   -f.title tc("dates")
-  -f.field tc("from"), text_field(:printed, :from, :value=>@begin.to_s, :size=>10)
-  -f.field tc("to"), text_field(:printed, :to, :value=>@end.to_s, :size=>10)
+  -f.field tc("from"), text_field(:printed, :from, :size=>10, :value=>1)
+  -f.field tc("to"), text_field(:printed, :to, :size=>10,:value=>Date.today)
   -f.field tc("journal"), select(:printed, :name, @current_company.journals.collect{|p| [p.name, p.id]})
   
        
