--- a/app/views/accountancy/_print_balance.html.haml
+++ b/app/views/accountancy/_print_balance.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   -f.title tc("dates")
-  -f.field tc("from"), text_field(:printed, :from,:value=>@begin.to_s,:size=>10)
-  -f.field tc("to"), text_field(:printed, :to,:value=>@end.to_s,:size=>10)
+  -f.field tc("from"), text_field(:printed, :from,:value=>Date.today.to_s,:size=>10)
+  -f.field tc("to"), text_field(:printed, :to,:value=>Date.today,:size=>10)
 
   
 
