after create becomes create_with_data, help updates
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1291 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/resources/employee.html.haml
+++ b/app/views/resources/employee.html.haml
@@ -26,4 +26,7 @@
     -c << toolbar do 
       -link(:sale_order_create, :controller=>:management)
     -c << dyta(:employee_sale_orders)
-
+  -if @employee.shape_operations.size > 0
+    -tb.tab(tc(:shape_operations, :count=>@employee.shape_operations.count)) do |c|
+      -c << dyta(:employee_shape_operations) 
+        
