load sequences, listings
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1296 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/configure.html.haml
+++ b/app/views/company/configure.html.haml
@@ -1,3 +1,6 @@
+-if @company.parameters.find(:all, :conditions=>["record_value_type = 'Sequence' AND record_value_id IS NULL"]).size > 0
+  =toolbar do
+    -link :sequences_load
 =error_messages_for 'company'
 -form_tag do
   =formalize do |f|
