create queries for listings
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1300 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/_listing_node.html.haml
+++ b/app/views/company/_listing_node.html.haml
@@ -7,6 +7,7 @@
     .content
       %span{:onclick=>"toggleElement('#{listing_node.key}')"}=listing_node.label
       %span.attribute=listing_node.name
+      =#puts listing_node.parent.model.inspect if listing_node.parent
 
 -if listing_node.reflection?
   .branches{:id=>listing_node.key}=render(:partial=>"listing_reflection", :object=>listing_node)
