--- a/public/stylesheets/dyta.css
+++ b/public/stylesheets/dyta.css
@@ -31,17 +31,17 @@ table.dyta tr.child td:first-child { padding-left:20px; }
 table.dyta td.empty { text-align:center; color: #777; padding:4px; background: #EEF; }
 table.dyta th, table.dyta td.empty, table.dyta td.procedures { border-top: 1px solid #BACFE6; }
 table.dyta th, table.dyta td { border-left: 1px solid #BACFE6; border-right: 1px solid #BACFE6; }
-table.dyta tr      th.bottom { clear:both; border-top:1px solid #BACFE6; padding: 0px 3px; background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; }
-table.dyta tr      th.bottom div.export { padding: 2px; float:left;}
-table.dyta tr      th.bottom div.export a { padding: 0 0 0 14px; background: url(../images/buttons/export.png) left center no-repeat;}
-table.dyta tr      th.bottom div.pagination { padding: 2px; float:right;}
-table.dyta tr      th.bottom div.pagination * { padding:2px 4px; }
-table.dyta tr      th.bottom div.pagination span.current { font-weight:bold; color: black; }
-table.dyta tr      th.bottom div.pagination span.disabled { color: #88A; }
-table.dyta tr      th.bottom div.pagination .prev_page { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2.png) no-repeat left;}
-table.dyta tr      th.bottom div.pagination .prev_page.disabled { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2-dis.png) no-repeat left;}
-table.dyta tr      th.bottom div.pagination .next_page { padding:2px 10px 2px 4px; background: url(../images/buttons/next2.png) no-repeat right;}
-table.dyta tr      th.bottom div.pagination .next_page.disabled { padding:2px 10px 2px 4px; background: url(../images/buttons/next2-dis.png) no-repeat right;}
+table.dyta tr      th.footer { clear:both; border-top:1px solid #BACFE6; padding: 0px 3px; background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; }
+table.dyta tr      th.footer div.export { padding: 2px; float:left;}
+table.dyta tr      th.footer div.export a { padding: 0 0 0 14px; background: url(../images/buttons/export.png) left center no-repeat;}
+table.dyta tr      th.footer div.pagination { padding: 2px; float:right;}
+table.dyta tr      th.footer div.pagination * { padding:2px 4px; }
+table.dyta tr      th.footer div.pagination span.current { font-weight:bold; color: black; }
+table.dyta tr      th.footer div.pagination span.disabled { color: #88A; }
+table.dyta tr      th.footer div.pagination .prev_page { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2.png) no-repeat left;}
+table.dyta tr      th.footer div.pagination .prev_page.disabled { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2-dis.png) no-repeat left;}
+table.dyta tr      th.footer div.pagination .next_page { padding:2px 10px 2px 4px; background: url(../images/buttons/next2.png) no-repeat right;}
+table.dyta tr      th.footer div.pagination .next_page.disabled { padding:2px 10px 2px 4px; background: url(../images/buttons/next2-dis.png) no-repeat right;}
 table.dyta tr      td.decimal { text-align: right; }
 table.dyta tr      td.float   { text-align: right; }
 table.dyta tr      td.integer { text-align: right; }
