git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1317 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -21,6 +21,6 @@
 :javascript
   $('nojavascript').hide();
   $('login').show();
-  $('user_name').select();
+  /*$('user_name').select();*/
   $('user_name').focus(); 
 
