--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,7 @@
     = stylesheet_link_tag 'print', :media=>'print'
     = calendar_link_tag
     = javascript_include_tag :defaults
-  %body{:id=>:body, :orient=>:vertical, :onload=>"resize();", :onresize=>'resize();'}
+  %body{:id=>:body, :orient=>:vertical, :onload=>"resize();"}
     = top_tag
     #columns{:orient=>:horizontal, :flex=>1}
       -side=side_tag
